# popcorn

./: .gitignore  Makefile  README.md  bootstrap.sh  go.mod  go.sum
api/proto/v1/: compilation-server.proto
cmd/popcorn-client/: main.go
cmd/popcorn-server/: main.go
cpp-example/: CMakeLists.txt
cpp-example/src/: main.cpp
cpp-example/tests/: tests-math.cpp
internal/api/proto/v1/: compilation-server.pb.go  compilation-server_grpc.pb.go
internal/client/: cached-header.go  check-servers.go  compiler-launcher.go  grpc-client.go  header-sha256-calculator.go  local-compiler.go  manage-servers.go  remote-compiler.go  settings.go
internal/common/: filesystem.go  grpc-zstd.go  logger.go  sha256-struct.go  version.go  wait-group-with-error.go
internal/server/: clients.go  compilation-server.go  cron.go  file-cache.go  file-sha256-cache.go  file-transferring.go  header-cache.go  sending-headers.go  sessions.go  settings.go  sha256-cache.go  stats.go  system-headers.go  user-sessions.go  users.go
